tests/errors/syntax_blockers/functions_in_uniontype.py
# pylint: disable=missing-function-docstring, missing-module-docstring/

#$ header function f((int)(int)|(real)(real), int|real)
def f(g, a):
    return g(a)
